cmake_minimum_required(VERSION 3.18)

PROJECT(net_test)

SET(CMAKE_CXX_FLAGS "-g -pthread")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
ADD_DEFINITIONS ( -std=c++1z)

MESSAGE(STATUS "src directory:"${PROJECT_BINARY_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../everest)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd/asio-1.16.1/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd/spd/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd/fmt/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd/date/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../3rd/random/include)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/../../libs/libeverest.a)