cmake_minimum_required(VERSION 3.18)
PROJECT(test_cmdline)
SET(CMAKE_CXX_FLAGS "-g -pthread")
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
ADD_DEFINITIONS ( -std=c++1z)
MESSAGE(STATUS "src directory:"${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../../)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main ${PROJECT_SOURCE_DIR}/../../../libs/libeverest.a)

